--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
 </head>
 <body>
 <% if (user) { %>
-<h1>Welcome to the app, <%= user.username %>!</h1>
+<h1>Welcome to PlanPop, <%= user.username %>!</h1>
 <p>
   <a href="/auth/sign-out">Sign out</a>
 </p>
@@ -17,7 +17,7 @@
   <a href="/auth/sign-up">Sign up</a> or <a href="/auth/sign-in">Sign in</a>.
 </p>
 <% } %>
-<p><a href="/vip-lounge">Get into the VIP Users Only lounge!</a></p>
+
 
 </body>
 </html>
