fixed wording in index

--- a/views/events/index.ejs
+++ b/views/events/index.ejs
@@ -26,7 +26,7 @@
             <% }); %>
         </ul>
     <% } else { %>
-        <p>There are no items in this pantry.</p>
+        <p>There are no events created.</p>
     <% }; %>
     
   </body>
