created new form and ejs + added route

--- a/views/events/index.ejs
+++ b/views/events/index.ejs
@@ -28,6 +28,8 @@
     <% } else { %>
         <p>There are no events created.</p>
     <% }; %>
+
+    <a href = "events/new"> Create new event</a>
     
   </body>
 </html>
