--- a/views/events/index.ejs
+++ b/views/events/index.ejs
@@ -15,15 +15,15 @@
            <% events.forEach(item => { %>
                   <li>
                     <strong><%= item.title %></strong> — <%= item.location %><br/>
-                    Date: <%= item.date ? item.date.toDateString() : 'No date set' %><br/>
+                    Date: <%= item.date ? item.date : 'No date set' %><br/>
                     Public: <%= item.isPublic ? 'Yes' : 'No' %><br/>
                   </li>
 
                 <% if (item.checklist && item.checklist.length > 0) { %>
                   <ul>
-                  <% item.checklist.forEach(items => { %>
+                  <% item.checklist.forEach(task => { %>
                     <li>
-                    <%= items.task %> — <%= items.isDone ? 'Done' : 'Pending' %>
+                    <%= task.task %> — <%= task.isDone ? 'Done' : 'Pending' %>
                     </li>
                   <% }) %>
                   </ul>
