--- a/views/events/new.ejs
+++ b/views/events/new.ejs
@@ -13,7 +13,7 @@
     <input type="text" name="title" id="title" required />
 
     <label for="date">Date:</label>
-    <input type="text" name="date" id="date" required />
+    <input type="date" name="date" id="date" min="<%= new Date().toISOString().split('T')[0] %>" required />
 
     <label for="location">Location:</label>
     <input type="text" name="location" id="location" required />
