created users controller, show ind, and edited navbar

--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -1,11 +1,7 @@
 <nav>
   <a href="/">Home</a>
-  <a href="/users">Explore Our Community</a>
+  <a href="/users">Other Users</a>
   <% if(user) { %>
-  <a href="/users/<%= user._id %>/events">View My Events</a>
-  <a href="/auth/sign-out">Sign Out</a>
-  <% } else { %>
-  <a href="/auth/sign-in">Sign In</a>
-  <a href="/auth/sign-up">Sign Up</a>
+  <a href="/users/<%= user._id %>/events">My Events</a>
   <% } %>
 </nav>
