--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= selectedUser.username %>'s Events</title>
+    <link rel="stylesheet" href="/stylesheets/style.css" />
+</head>
 </head>
 <body>
     <%- include('../partials/_navbar.ejs') %>
