minor issues fixed 2

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,3 +21,8 @@ h1, h2, h3 {
   color: #000;
   text-shadow: 1px 1px 0 #fff, 2px 2px 0 #000;
 }
+
+h1::before {
+  content: "🌟 ";
+  color: #ffd700;
+}
