--- a/views/events/index.ejs
+++ b/views/events/index.ejs
@@ -8,38 +8,33 @@
   </head>
   <body>
     <%- include('../partials/_navbar.ejs') %> 
-    <h1>Welcome to My Events</h1>
+    <h1>My Events</h1>
     <a href="/users/<%= user._id %>/events/new">Create new event</a>
     
     <% if (events.length > 0){ %>
       <ul>
         <% events.forEach(item => { %>
-            <li>
-              <strong><%= item.title %></strong> — <%= item.location %><br/>
-              Date: <%= item.date ? item.date.toISOString().split('T')[0] : 'No date set' %><br/>
-              Public: <%= item.isPublic ? 'Yes' : 'No' %><br/>
-            </li>
+          <div class="event-item">
+          <strong><%= item.title %></strong> — <%= item.location %><br/>
+          Date: <%= item.date ? item.date.toISOString().split('T')[0] : 'No date set' %><br/>
+          Public: <%= item.isPublic ? 'Yes' : 'No' %><br/>
 
-            <% if (item.checklist && item.checklist.length > 0) { %>
-              <ul>
-                <% item.checklist.forEach(task => { %>
-                  <li>
-                    <%= task.task %> — <%= task.isDone ? 'Done' : 'Pending' %>
-                  </li>
-                <% }) %>
-              </ul>
-            <% } else { %>
-              <em>No checklist items</em>
-              <br />
-            <% } %>
-              
-            <br />
-            <a href="/users/<%= user._id %>/events/<%= item._id %>/edit">Edit</a>
+          <% if (item.checklist && item.checklist.length > 0) { %>
+            <ul class="checklist">
+            <% item.checklist.forEach(task => { %>
+           <li><%= task.task %> — <%= task.isDone ? 'Done' : 'Pending' %></li>
+          <% }) %>
+            </ul>
+        <% } else { %>
+        <em>No checklist items</em><br/>
+        <% } %>
 
-            <form action="/users/<%= user._id %>/events/<%= item._id %>?_method=DELETE" method="POST" style="display:inline;">
-            <button type="submit">Delete</button>
-          </form>
-          
+        <a href="/users/<%= user._id %>/events/<%= item._id %>/edit">Edit</a>
+
+        <form action="/users/<%= user._id %>/events/<%= item._id %>?_method=DELETE" method="POST" style="display:inline;">
+          <button type="submit">Delete</button>
+        </form>
+        </div>
         <% }); %>
       </ul>
     <% } else { %>
