--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -3,5 +3,6 @@
   <a href="/users">Other Users</a>
   <% if(user) { %>
   <a href="/users/<%= user._id %>/events">My Events</a>
+  <a href="/auth/sign-out">Sign out</a>
   <% } %>
 </nav>
