--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,12 +8,11 @@
 </head>
 <body>
 <%- include('./partials/_navbar.ejs') %> 
+<img src="https://i.imgur.com/YLv3bQI.png" />
 <% if (user) { %>
 <h1>Welcome to PlanPop, <%= user.username %>!</h1>
 <p>Your space to plan, polish, and pop off with unforgettable events.</p>
-<p>
-  <a href="/auth/sign-out">Sign out</a>
-</p>
+
 <% } else { %>
 <h1>Welcome to PlanPop, guest.</h1>
 <p>Your personal event planner with a pop of personality.</p>
