--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -1,5 +1,5 @@
 <nav>
-  <a href="/">Home</a>
+  <a href="/" class="logo">PLAN <span class="pop">POP</span></a>
   <a href="/users">Other Users</a>
   <% if(user) { %>
   <a href="/users/<%= user._id %>/events">My Events</a>
