--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -10,6 +10,9 @@
 <body>
     <%- include('../partials/_navbar.ejs') %>
     <h1><%= selectedUser.username %>'s Events</h1>
+    <% if (!user) { %>
+      <p>You are viewing public events as a guest.</p>
+    <% } %>
 
     <% if (events.length > 0){ %>
       <ul>
