--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -8,18 +8,22 @@
   </head>
   <body>
     <%- include('../partials/_navbar.ejs') %>
-    <h1>Create a new account!</h1>
-    <form action="/auth/sign-up" method="POST">
-      <label for="username">Username:</label>
-      <input type="text" name="username" id="username" />
+    <div class="signup-body">
+      <h1 class="no-star">Create a new account!</h1>
+      <div class="signup-form-wrapper">
+        <form action="/auth/sign-up" method="POST">
+          <label for="username">Username:</label>
+          <input type="text" name="username" id="username" />
 
-      <label for="password">Password:</label>
-      <input type="password" name="password" id="password" />
+          <label for="password">Password:</label>
+          <input type="password" name="password" id="password" />
 
-      <label for="confirmPassword">Confirm Password:</label>
-      <input type="password" name="confirmPassword" id="confirmPassword" />
+          <label for="confirmPassword">Confirm Password:</label>
+          <input type="password" name="confirmPassword" id="confirmPassword" />
 
-      <button type="submit">Sign up</button>
-    </form>
+          <button type="submit">Sign up</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
