--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -164,7 +164,7 @@ nav a:hover {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: calc(100vh - 80px); /* subtract navbar height */
+ min-height: calc(100vh - 70px);   /* subtract navbar height */
   padding: 2rem;
   background: linear-gradient(135deg, #fffacd, #ffd700);
   border: 3px solid #000;
@@ -209,7 +209,7 @@ nav a:hover {
     border: 3px solid #000;
     box-shadow: 5px 5px 0 #000;
     overflow: hidden;
-    
+    min-height: calc(100vh - 70px);
 }
 
 .signin-body h1{
@@ -295,6 +295,7 @@ nav a:hover {
     border: 3px solid #000;
     box-shadow: 5px 5px 0 #000;
     overflow: hidden;
+    min-height: calc(100vh - 70px);
     
 }
 
