--- a/views/events/index.ejs
+++ b/views/events/index.ejs
@@ -8,38 +8,40 @@
   </head>
   <body>
     <%- include('../partials/_navbar.ejs') %> 
-    <h1>My Events</h1>
-    <a href="/users/<%= user._id %>/events/new">Create new event</a>
+    <div class ="events-wrapper">
+      <h1> My Events</h1>
+      <a href="/users/<%= user._id %>/events/new" class="button-link">Create new event</a>
     
-    <% if (events.length > 0){ %>
-      <ul>
-        <% events.forEach(item => { %>
-          <div class="event-item">
-            <strong><%= item.title %></strong> — <%= item.location %><br/>
-            Date: <%= item.date ? item.date.toISOString().split('T')[0] : 'No date set' %><br/>
-            Public: <%= item.isPublic ? 'Yes' : 'No' %><br/>
+      <% if (events.length > 0){ %>
+        <ul>
+          <% events.forEach(item => { %>
+            <div class="event-item">
+              <strong><%= item.title %></strong> — <%= item.location %><br/>
+              Date: <%= item.date ? item.date.toISOString().split('T')[0] : 'No date set' %><br/>
+              Public: <%= item.isPublic ? 'Yes' : 'No' %><br/>
 
-            <% if (item.checklist && item.checklist.length > 0) { %>
-              <ul class="checklist">
-              <% item.checklist.forEach(task => { %>
-              <li><%= task.task %> — <%= task.isDone ? 'Done' : 'Pending' %></li>
-            <% }) %>
-              </ul>
-            <% } else { %>
-              <em>No checklist items</em><br/>
-            <% } %>
+              <% if (item.checklist && item.checklist.length > 0) { %>
+                <ul class="checklist">
+                  <% item.checklist.forEach(task => { %>
+                  <li><%= task.task %> — <%= task.isDone ? 'Done' : 'Pending' %></li>
+              <% }) %>
+                </ul>
+              <% } else { %>
+                <em>No checklist items</em><br/>
+              <% } %>
 
-          <a href="/users/<%= user._id %>/events/<%= item._id %>/edit">Edit</a>
+            <a href="/users/<%= user._id %>/events/<%= item._id %>/edit" class="button-link">Edit</a>
               
-          <form action="/users/<%= user._id %>/events/<%= item._id %>?_method=DELETE" method="POST" style="display:inline;">
-            <button type="submit">Delete</button>
-          </form>
-          </div>
-        <% }); %>
-      </ul>
-    <% } else { %>
-      <p>There are no events created.</p>
-    <% } %>
+            <form action="/users/<%= user._id %>/events/<%= item._id %>?_method=DELETE" method="POST" style="display:inline;">
+              <button type="submit">Delete</button>
+            </form>
+            </div>
+          <% }); %>
+        </ul>
+      <% } else { %>
+        <p>There are no events created.</p>
+      <% } %>
+    </div>
 
 
 
